--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
             <div class="main">
                 <div class="main_slide">
                     <div class="slide_img">
-                        <a href="/"><img src="/images/banner/bn1.jpg" alt="" class="slide_img-item"></a>
+                        <a href="/"><img src="./images/banner/bn1.jpg" alt="" class="slide_img-item"></a>
                     </div>
                     <div class="slide_img">
-                        <a href="/"><img src="/images/banner/bn2.jpg" alt="" class="slide_img-item"></a>
+                        <a href="/"><img src="./images/banner/bn2.jpg" alt="" class="slide_img-item"></a>
                     </div>
                     <div class="slide_img">
-                        <a href="/"><img src="/images/banner/bn3.jpg" alt="" class="slide_img-item"></a>
+                        <a href="/"><img src="./images/banner/bn3.jpg" alt="" class="slide_img-item"></a>
                     </div>
                 </div>
                 <div class="main_nav">
@@ -127,7 +127,7 @@
                     <div class="product-content">
                        <div class="product_item">
                             <div class="product_image">
-                                <img src="/images/product/sp1.jpg" alt="">
+                                <img src="./images/product/sp1.jpg" alt="">
                             </div>
                             <div class="product_info">
                                 <div class="product_info-title">
@@ -152,7 +152,7 @@
                        </div>
                        <div class="product_item">
                             <div class="product_image">
-                                <img src="/images/product/sp2.jpg" alt="">
+                                <img src="./images/product/sp2.jpg" alt="">
                             </div>
                             <div class="product_info">
                                 <div class="product_info-title">
@@ -177,7 +177,7 @@
                        </div>
                        <div class="product_item">
                             <div class="product_image">
-                                <img src="/images/product/sp3.jpg" alt="">
+                                <img src="./images/product/sp3.jpg" alt="">
                             </div>
                             <div class="product_info">
                                 <div class="product_info-title">
@@ -202,7 +202,7 @@
                        </div>
                        <div class="product_item">
                             <div class="product_image">
-                                <img src="/images/product/sp4.jpg" alt="">
+                                <img src="./images/product/sp4.jpg" alt="">
                             </div>
                             <div class="product_info">
                                 <div class="product_info-title">
@@ -227,7 +227,7 @@
                        </div>
                        <div class="product_item">
                             <div class="product_image">
-                                <img src="/images/product/sp5.jpg" alt="">
+                                <img src="./images/product/sp5.jpg" alt="">
                             </div>
                             <div class="product_info">
                                 <div class="product_info-title">
@@ -252,7 +252,7 @@
                        </div>
                        <div class="product_item">
                             <div class="product_image">
-                                <img src="/images/product/sp6.jpg" alt="">
+                                <img src="./images/product/sp6.jpg" alt="">
                             </div>
                             <div class="product_info">
                                 <div class="product_info-title">
@@ -277,7 +277,7 @@
                        </div>
                        <div class="product_item">
                             <div class="product_image">
-                                <img src="/images/product/sp6.jpg" alt="">
+                                <img src="./images/product/sp6.jpg" alt="">
                             </div>
                             <div class="product_info">
                                 <div class="product_info-title">
@@ -302,7 +302,7 @@
                         </div>
                        <div class="product_item">
                             <div class="product_image">
-                                <img src="/images/product/sp6.jpg" alt="">
+                                <img src="./images/product/sp6.jpg" alt="">
                             </div>
                             <div class="product_info">
                                 <div class="product_info-title">
@@ -327,7 +327,7 @@
                         </div>
                        <div class="product_item">
                             <div class="product_image">
-                                <img src="/images/product/sp6.jpg" alt="">
+                                <img src="./images/product/sp6.jpg" alt="">
                             </div>
                             <div class="product_info">
                                 <div class="product_info-title">
@@ -352,7 +352,7 @@
                         </div>
                        <div class="product_item">
                             <div class="product_image">
-                                <img src="/images/product/sp6.jpg" alt="">
+                                <img src="./images/product/sp6.jpg" alt="">
                             </div>
                             <div class="product_info">
                                 <div class="product_info-title">
