--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
                                 <span>Menu</span>
                             </span>
                             <ul>
-                                <li><a href="/">Trang chủ</a></li>
-                                <li><a href="/">Điện thoại</a></li>
-                                <li><a href="/">Máy tính bảng</a></li>
-                                <li><a href="/">Tivi</a></li>
-                                <li><a href="/">Products view</a></li>
-                                <li><a href="/">Blog</a></li>
-                                <li><a href="/">Giới thiệu</a></li>
-                                <li><a href="/">Landing page</a></li>
+                                <li><a href="./">Trang chủ</a></li>
+                                <li><a href="./">Điện thoại</a></li>
+                                <li><a href="./">Máy tính bảng</a></li>
+                                <li><a href="./">Tivi</a></li>
+                                <li><a href="./">Products view</a></li>
+                                <li><a href="./">Blog</a></li>
+                                <li><a href="./">Giới thiệu</a></li>
+                                <li><a href="./">Landing page</a></li>
                             </ul>
                         </li>
                     </ul>
                 </div>
                 <div class="menu_logo">
-                    <a href="/">Ezone</a>
+                    <a href="./">Ezone</a>
                 </div>
                 <div id="menu_search">
-                    <form action="" method="post" id="formSearch">
+                    <form action="" method="post" id="form_search">
                         <input type="text" placeholder="Tìm kiếm sản phẩm">
                         <button class="btnSearch"><i class="fas fa-search"></i></button>
                     </form>
@@ -77,13 +77,13 @@
             <div class="main">
                 <div class="main_slide">
                     <div class="slide_img">
-                        <a href="/"><img src="./images/banner/bn1.jpg" alt="" class="slide_img-item"></a>
+                        <a href="./"><img src="./images/banner/bn1.jpg" alt="" class="slide_img-item"></a>
                     </div>
                     <div class="slide_img">
-                        <a href="/"><img src="./images/banner/bn2.jpg" alt="" class="slide_img-item"></a>
+                        <a href="./"><img src="./images/banner/bn2.jpg" alt="" class="slide_img-item"></a>
                     </div>
                     <div class="slide_img">
-                        <a href="/"><img src="./images/banner/bn3.jpg" alt="" class="slide_img-item"></a>
+                        <a href="./"><img src="./images/banner/bn3.jpg" alt="" class="slide_img-item"></a>
                     </div>
                 </div>
                 <div class="main_nav">
